Refactor navigation and update vocabularies page layout

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -16,7 +16,7 @@
   --primary-color: #ffb0b0;
   --secondary-color: #fff7d1;
   --orange-color: #ffd09b;
-  --beige-color: #ffd09b;
+  --beige-color: #FFF8D1;
   /* Font size */
   --font-size-s: 0.9rem;
   --font-size-n: 1rem;
